# StockHero

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
api/: main.py
app/: main.py
app/components/: stock_screener.py
app/pages/: update_stocks.py
config/: logger.py
data/analysis/: kd_calculator.py  screening.py
data/crawler/: institutional_history.py  ratio_update.py  stock_history.py  stock_update.py  stocks_info.py
data/database/: db_manager.py  models.py
jobs/: daily_update.py
notebook/: docker.txt
