[tool.poetry]
name = "stockhero"
version = "0.1.0"
description = ""
authors = ["ianycchen <ian@cloud-latitude.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.1.3"
requests = "^2.32.3"
pandas = "^2.2.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
google-cloud-storage = "^2.19.0"
streamlit = "^1.41.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
